fixed "New Tab" for SDK 0.42. and packaging config dir

--- a/app/views/tabbed_content_widget/show.html.haml
+++ b/app/views/tabbed_content_widget/show.html.haml
@@ -9,7 +9,7 @@
 
     - if scrivito_in_editable_view?
       %li.new_tab
-        %a{id: "add_new_tab", widgetid: widget.id, href: "#", style: "background-color: #439439; color: white;"}
+        %a{id: "add_new_tab", pageid: @obj.id, widgetid: widget.id, href: "#", style: "background-color: #439439; color: white;"}
           New Tab
 
   .tab-content
