Fixing Widget Preview image

--- a/app/views/tabbed_content_widget/thumbnail.html.haml
+++ b/app/views/tabbed_content_widget/thumbnail.html.haml
@@ -1,10 +1,2 @@
-.editing-dialog-thumbnail
-  .visualization
-    %span.icon.editing-icon-plus
-
-  .title
-    Tabbed Content
-
-  .description
-    Widget for inserting content tabs
-
+= scrivito_thumbnail 'Tabbed Content', image_tag("scrivito_tabbed_content_widget/widget_preview_tabbed.png") do
+  Content Tabs
