--- a/app/views/tabbed_content_tab_widget/details.html.erb
+++ b/app/views/tabbed_content_tab_widget/details.html.erb
@@ -1,9 +1,9 @@
-<div class="scrivito-tab-title-details">
+<div class="scrivito-title-details">
   <%= scrivito_tag :h4, widget, :title %>
-  <%= link_to '(details)', '#', 'data-scrivito-tab-toggle-details' => widget.id %>
-  <div class="scrivito-tab-details-<%= widget.id %>">
+  <%= link_to '(details)', '#', 'data-scrivito-toggle-details' => widget.id %>
+  <div class="scrivito-details-<%= widget.id %>">
     <div>
-      <b>Background Color</b>
+      <h5>Background Color</h5>
       <%= render 'scrivito_advanced_editors/color_picker', widget: widget, attribute: :background_color %>
     </div>
   </div>
