--- a/app/views/tabbed_content_widget/show.html.erb
+++ b/app/views/tabbed_content_widget/show.html.erb
@@ -8,7 +8,7 @@
   </div>
   <div class="scrivito-tab-contents">
     <% widget.tabs.each_with_index do |tab, i| %>
-      <%= scrivito_tag :div, tab, :content, class: "scrivito-tab-content #{'scrivito-tab-active' if i == 0}" %>
+      <%= scrivito_tag :div, tab, :content, class: "#{tab.background_color} scrivito-tab-content #{'scrivito-tab-active' if i == 0}" %>
     <% end %>
   </div>
 </div>
