--- a/app/views/tabbed_content_widget/show.html.erb
+++ b/app/views/tabbed_content_widget/show.html.erb
@@ -1,14 +1,16 @@
 <div class="scrivito-tab-group">
-  <div class="scrivito-tab-titles">
+  <ul class="nav nav-tabs" role="tablist">
     <% widget.tabs.each_with_index do |tab, i| %>
-      <div class="<%= tab.classes(i) %>">
-        <%= scrivito_value tab.title %>
-      </div>
+      <li role="presentation" class="<%= i == 0 ? 'active' : '' %>">
+        <a href="#tab-<%= widget.id %>-<%= i %>" aria-controls="home" role="tab" data-toggle="tab" class="<%= tab.background_color %>">
+          <%= scrivito_value tab.title %>
+        </a>
+      </li>
     <% end %>
   </div>
-  <div class="scrivito-tab-contents">
+  <div class="tab-content">
     <% widget.tabs.each_with_index do |tab, i| %>
-      <%= scrivito_tag :div, tab, :content, class: "#{tab.background_color} scrivito-tab-content #{'scrivito-tab-active' if i == 0}" %>
+      <%= scrivito_tag :div, tab, :content, id: "tab-#{widget.id}-#{i}", class: "#{tab.background_color} tab-pane #{'active' if i == 0}" %>
     <% end %>
   </div>
 </div>
