--- a/app/views/tabbed_content_tab_widget/details.html.erb
+++ b/app/views/tabbed_content_tab_widget/details.html.erb
@@ -1,10 +1,7 @@
-<div class="scrivito-title-details">
+<%= scrivito_details_for do %>
+  <h4><%= t('scrivito_tabbed_content_widget.details.title', default: 'Title') %></h4>
   <%= scrivito_tag :div, widget, :title %>
-  <%= link_to '(details)', '#', 'data-scrivito-toggle-details' => widget.id %>
-  <div class="scrivito-details-<%= widget.id %>">
-    <div>
-      <b>Background Color</b>
-      <%= scrivito_tag :div, widget, :background_color, data: {colors_list: widget.scrivito_selectable_color_classes} %>
-    </div>
-  </div>
-</div>
+  <br />
+  <h4><%= t('scrivito_tabbed_content_widget.details.background_color', default: 'Background Color') %></h4>
+  <%= scrivito_tag :div, widget, :background_color, data: {colors_list: widget.scrivito_selectable_color_classes} %>
+<% end %>
