--- a/app/views/tabbed_content_widget/thumbnail.html.erb
+++ b/app/views/tabbed_content_widget/thumbnail.html.erb
@@ -1,3 +1,3 @@
-<%= scrivito_thumbnail 'Tabbed Content', image_tag("scrivito_tabbed_content_widget/widget_preview_tabbed.png") do %>
-  Content Tabs
+<%= scrivito_thumbnail t('scrivito_tabbed_content_widget.thumbnail.title', default: 'Tab'), image_tag("scrivito_tabbed_content_widget/widget_preview_tabbed.png") do %>
+  <%= t('scrivito_tabbed_content_widget.thumbnail.description', default: 'Add a tab to your page')%>
 <% end %>
